# cache-layer-optimizer

./: .gitignore  CHANGELOG.md  CHARTER.md  Cargo.toml  DELIVERABLES.md  LICENSE  Makefile  README.md
docs/: ARCHITECTURE.md  TESTING_STRATEGY.md
examples/: basic_optimizer.rs  dynamic_tiering.rs  predictive_warming.rs
src/: coherence.rs  error.rs  lib.rs  metrics.rs  optimizer.rs  predictive.rs  tiering.rs  warming.rs
tests/: coherence_tests.rs  predictive_tests.rs  tiering_tests.rs  warming_tests.rs
tests/benches/: cache_warming_bench.rs  coherence_bench.rs  dynamic_tiering_bench.rs  predictive_cache_bench.rs  throughput_bench.rs
