[package]
name = "cache-layer-optimizer"
version = "0.1.0"
edition = "2021"
authors = ["Equilibrium Tokens"]
description = "Advanced caching strategies and optimizations for cache-layer"
license = "MIT"
repository = "https://github.com/equilibrium-tokens/cache-layer-optimizer"
keywords = ["cache", "optimization", "ml", "predictive", "caching"]
categories = ["caching", "algorithm"]
readme = "README.md"

[features]
default = ["memory", "predictive"]
memory = ["cache-layer/memory"]
redis = ["cache-layer/redis"]
disk = ["cache-layer/disk"]
predictive = ["linfa", "linfa-linear-regression", "ndarray"]
full = ["memory", "redis", "disk", "predictive"]

[dependencies]
# Base cache layer
cache-layer = { path = "../cache-layer", default-features = false }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Metrics
prometheus = { version = "0.13", optional = true }

# ML/Statistics for predictive caching
linfa = { version = "0.7", optional = true }
linfa-linear-regression = { version = "0.7", optional = true }
ndarray = { version = "0.15", optional = true }

# Statistics and probability
statrs = "0.16"

# Utilities
dashmap = "5.5"
parking_lot = "0.12"
ahash = "0.8"

# Time utilities
chrono = "0.4"

[dev-dependencies]
# Testing
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.12"
proptest = "1.4"

# Benchmarking
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

# Test utilities
tempfile = "3.8"
rand = "0.8"
rand_chacha = "0.3"

# Mocking
fake = { version = "2.9", features = ["derive"] }

[[bench]]
name = "predictive_cache_bench"
path = "tests/benches/predictive_cache_bench.rs"
harness = false
required-features = ["predictive"]

[[bench]]
name = "cache_warming_bench"
path = "tests/benches/cache_warming_bench.rs"
harness = false

[[bench]]
name = "dynamic_tiering_bench"
path = "tests/benches/dynamic_tiering_bench.rs"
harness = false

[[bench]]
name = "coherence_bench"
path = "tests/benches/coherence_bench.rs"
harness = false

[[bench]]
name = "throughput_bench"
path = "tests/benches/throughput_bench.rs"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
